set height to avoid jumping on iframe load

--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,7 @@ aside {
 header {
   position: relative;
   width: 100%;
-  min-height: auto;
+  min-height: 600px;
   background-repeat: no-repeat;
   background-color: #102F52;
   background-size: 100% auto;
